--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "run-s clean transpile",
     "server": "node ./dist/bin/www"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "luxon": "^3.6.1",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10"
   }
