--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "luxon": "^3.6.1",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10"
