--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "luxon": "^3.6.1",
-    "mongoose": "^8.14.2",
+    "mongoose": "^8.15.0",
+    "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.10"
   }
 }
