--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "luxon": "^3.6.1",
     "mongoose": "^8.15.0",
     "mongoose-sequence": "^6.0.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "open": "^10.1.2",
+    "swagger-ui-express": "^5.0.1"
   }
 }
