--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js",
+    "start": "cross-env USE_SWAGGER=true nodemon src/app.js",
     "build": "run-s clean transpile",
-    "server": "node ./dist/bin/www"
+    "server": "cross-env USE_SWAGGER=true node ./dist/bin/www",
+    "dev": "cross-env USE_SWAGGER=false nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,8 @@
     "nodemon": "^3.1.10",
     "open": "^10.1.2",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
